--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "@types/node": "18.11.13",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "apexcharts": "^3.36.3",
+    "chart.js": "^4.1.0",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "typescript": "4.9.4"
