--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "chart.js": "^4.1.0",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
-    "next": "13.0.6",
+    "next": "^13.0.6",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^5.0.1",
